3.0 beta